Fix plugin problems and dependencies, remove use of boxed number constructors for Java 9
Change-Id: I4d7ea02556a75bddad9c4cad0703eb9707f8d5eb